# speaker-similarity

./: .gitignore  main.py  pyproject.toml  requirements.txt
helper/: extract_features.py  ml_models.py
models/: cat_model_split.joblib  cat_model_split_wavlm.joblib  lgbm_model_split.joblib  scaler wavlm.joblib  scaler.joblib  xgb_model_split.joblib
utils/: model.py
